tests/ui/formatter/fail/uppercase_binary.rs
use masterror::Error;

#[derive(Debug, Error)]
#[error("{value:B}")]
struct UppercaseBinary {
    value: u8,
}

fn main() {}
