tests/ui/formatter/fail/uppercase_binary.stderr
error: placeholder spanning bytes 0..9 uses an unsupported formatter
 --> tests/ui/formatter/fail/uppercase_binary.rs:4:10
  |
4 | #[error("{value:B}")]
  |          ^^^^^^^^^
